# verilator-python

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: build_wheels.yaml
example/src/: CMakeLists.txt
examples/: pyproject.toml
examples/src/: CMakeLists.txt  _example.cpp
examples/src/example/: __init__.py
scripts/: build_dist.py  win-install-winflexbison.ps1
src/verilator/: __init__.py  __main__.py
tests/: test_verilator.py
